force-app/main/default/objects/Territory_Map_Object_Setting__c/Territory_Map_Object_Setting__c.object-meta.xml
<CustomObject>
    <description>Stores the default address mapping and target field per object for a given territory map collection.</description>
    <label>Territory Map Object Setting</label>
    <nameField>
        <label>Map Object Setting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Map Object Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>