force-app/main/default/objects/Territory_Map_Object_Setting__c/fields/Address_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Address_Mapping__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The address mapping to use for this object when searching on this map.</description>
    <inlineHelpText>The address mapping to use for this object when searching on this map.</inlineHelpText>
    <label>Address Mapping</label>
    <referenceTo>Address_Mapping__c</referenceTo>
    <relationshipLabel>Map Object Settings</relationshipLabel>
    <relationshipName>Territory_Map_Object_Settings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>