force-app/main/default/objects/Territory_Map_Object_Setting__c/fields/CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>CompositeKey__c</fullName>
    <description>A composite key of TerritoryCollectionMapId and ObjectAPIName, in lowercase, in the format TerritoryCollectionMapId-ObjectApiName</description>
    <inlineHelpText>A composite key of TerritoryCollectionMapId and ObjectAPIName, in lowercase, in the format TerritoryCollectionMapId-ObjectApiName</inlineHelpText>
    <label>Composite Key</label>
    <length>79</length>
    <type>Text</type>
</CustomField>