force-app/main/default/objects/Territory_Map_Object_Setting__c/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>The API Name of the SObject that this Object Setting is for.  Is based on the Address Mapping that is related to this record</description>
    <formula>Address_Mapping__r.ObjectApiName__c</formula>
    <inlineHelpText>The API Name of the SObject that this Object Setting is for.  Is based on the Address Mapping that is related to this record</inlineHelpText>
    <label>SObject API Name</label>
    <type>Text</type>
</CustomField>