force-app/main/default/objects/Territory_Map_Object_Setting__c/fields/Target_Single_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Single_Name_Field__c</fullName>
    <description>The full API name of the target field that will be used for storing the Single Name of the matching territory, including the namespace.</description>
    <inlineHelpText>The full API name of the target field that will be used for storing the Single Name of the matching territory, including the namespace.</inlineHelpText>
    <label>Target Single Name Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>