force-app/main/default/objects/Territory_Map_Object_Setting__c/fields/Territory_Map_Collection__c.field-meta.xml
<CustomField>
    <fullName>Territory_Map_Collection__c</fullName>
    <label>Territory Map Collection</label>
    <referenceTo>Territory_Map_Collection__c</referenceTo>
    <relationshipLabel>Object Settings</relationshipLabel>
    <relationshipName>Object_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>