force-app/main/default/objects/Territory_Map_Object_Setting__c/fields/Write_To_Multiple_When_Single_Match__c.field-meta.xml
<CustomField>
    <fullName>Write_To_Multiple_When_Single_Match__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a single territory match is found, should the value be written into the target multiple fields?</description>
    <inlineHelpText>When a single territory match is found, should the value be written into the target multiple fields?</inlineHelpText>
    <label>Write to &quot;Multiple&quot; when a single match?</label>
    <type>Checkbox</type>
</CustomField>