force-app/main/default/objects/Territory_Map_Object_Setting__c/fields/Write_To_Single_When_Multiple_Matches__c.field-meta.xml
<CustomField>
    <fullName>Write_To_Single_When_Multiple_Matches__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When multiple territory matches are found, should a value be written into the target single fields?</description>
    <inlineHelpText>When multiple territory matches are found, should a value be written into the target single fields?</inlineHelpText>
    <label>Write to &quot;Single&quot; when multiple matches?</label>
    <type>Checkbox</type>
</CustomField>